--- a/dot_config/fontconfig/fonts.conf
+++ b/dot_config/fontconfig/fonts.conf
@@ -4,6 +4,7 @@
 	<alias>
 		<family>sans-serif</family>
 		<prefer>
+			<family>Fira Sans</family>
 			<family>Noto Sans</family>
 		</prefer>
 	</alias>
